[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchxai"
version = "0.0.1"
description = "Explainability Toolkit for PyTorch"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "torchxai contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.1",
  "numpy>=1.24",
  "pillow>=10.0",
  "typing-extensions>=4.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.6.9",
  "black>=24.10.0",
  "mypy>=1.10.0",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.5.30",
]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.5.30",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]
extend-exclude = ["docs", "examples"]

[tool.ruff.lint]
extend-select = ["I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
strict_optional = true
ignore_missing_imports = true
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]



